--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <div class="nav-wrapper green">
       <div class="container">
         <a href="#" class="brand-logo center" style="font-family: 'Pacifico', cursive;">  
-        <img src="LogoMakr_03yOTm.png" alt="" style="width: 5%;">
-          Foodle</a>
+        <img src="foodle.svg" alt="" style="width: 8rem;"></a>
         <ul class="right">
           <li><a href="#" class="clear-btn btn green lighten-3">Clear All</a></li>
         </ul>
